# Ai-mentor

./: README.md
.github/workflows/: keep-alive.yml
backend/: Dockerfile  pom.xml
backend/src/main/java/com/aimentor/backend/: Analysis.java  AnalysisController.java  AnalysisRepository.java  Auth.java  AuthController.java  BackendApplication.java  CorsConfig.java  MlClient.java  RateLimitFilter.java  Roadmap.java  RoadmapRepository.java  User.java  UserRepository.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/aimentor/backend/: BackendApplicationTests.java
frontend/: .env.production  index.html  vite.config.js
frontend/src/: App.css  Assess.jsx  History.jsx  Landing.jsx  Layout.jsx  Login.jsx  MentorChat.jsx  auth.jsx  index.css  main.jsx
ml-service/: pyproject.toml
ml-service/app/: courses.py  courses_cache.json  grade.py  grade_model.joblib  llm.py  main.py  pipeline.py  roles_cache.json
ml-service/app/data/: roles.json  skills.json
